--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Tech2etc Ecommerce Tutorial</title>
+        <title> Zilla Ecommerce </title>
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
         <link rel="stylesheet" href="style.css">
         </head>
@@ -45,11 +45,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs. 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>   
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f2.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -61,11 +61,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs. 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f3.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -77,11 +77,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Khs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f4.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -93,11 +93,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f5.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -109,11 +109,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f6.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -125,11 +125,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f7.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -141,11 +141,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/f8.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -157,12 +157,12 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>                    
                
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n1.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -174,11 +174,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>   
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n2.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -190,11 +190,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n3.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -206,11 +206,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n4.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -222,11 +222,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n5.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -238,11 +238,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n6.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -254,11 +254,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n7.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -270,11 +270,11 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
-                    <div class="pro">
+                    <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n8.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
@@ -286,7 +286,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>$78</h4>
+                            <h4>Kshs 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>                    
