--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li id="lg-bag"><a class="active" href="Cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                <li><a href="#" onclick="logout()">Logout</a></li>
                 <a href="#" id="close"><i class="far fa-times"></i></a>
             </ul>
         </div>
@@ -48,13 +49,6 @@
     </section>
 
     <section id="cart-add" class="section-p1">
-        <div id="coupon">
-            <h3>Apply Coupon</h3>
-            <div>
-                <input type="text" placeholder="Enter Your Coupon">
-                <button class="normal">Apply</button>
-            </div>
-        </div>
         <div id="Subtotal">
             <h3>Cart Totals</h3>
             <table>
@@ -71,8 +65,8 @@
                     <td><strong id="cartTotal">Kshs. 0.00</strong></td>
                 </tr>
             </table>
-            <button class="normal">Proceed to checkout</button>
-        </div>            
+            <button id="checkoutButton" class="normal">Proceed to checkout</button>
+        </div>
     </section>
     
     <footer class="section-p1">
@@ -124,56 +118,5 @@
         </div>
     </footer>
 
-    <script>
-        // Function to load cart items from localStorage
-        function loadCart() {
-            const cartItems = JSON.parse(localStorage.getItem('cart')) || [];
-            const cartTable = document.getElementById('cartItems');
-            let total = 0;
-
-            // Clear the current cart display
-            cartTable.innerHTML = '';
-
-            cartItems.forEach((item, index) => {
-                const subtotal = item.price * item.quantity;
-                total += subtotal;
-
-                const row = `
-                    <tr>
-                        <td><a href="#" onclick="removeFromCart(${index})"><i class="far fa-times-circle"></i></a></td>
-                        <td><img src="${item.image}" alt="${item.name}"></td>
-                        <td>${item.name}</td>
-                        <td>Kshs. ${item.price.toFixed(2)}</td>
-                        <td><input type="number" value="${item.quantity}" onchange="updateQuantity(${index}, this.value)"></td>
-                        <td>Kshs. ${subtotal.toFixed(2)}</td>
-                    </tr>
-                `;
-                cartTable.innerHTML += row;
-            });
-
-            // Update cart totals
-            document.getElementById('cartSubtotal').innerText = `Kshs. ${total.toFixed(2)}`;
-            document.getElementById('cartTotal').innerText = `Kshs. ${total.toFixed(2)}`;
-        }
-
-        // Update quantity of items in the cart
-        function updateQuantity(index, newQuantity) {
-            let cartItems = JSON.parse(localStorage.getItem('cart')) || [];
-            cartItems[index].quantity = parseInt(newQuantity);
-            localStorage.setItem('cart', JSON.stringify(cartItems));
-            loadCart(); // Reload the cart to update totals
-        }
-
-        // Remove item from cart
-        function removeFromCart(index) {
-            let cartItems = JSON.parse(localStorage.getItem('cart')) || [];
-            cartItems.splice(index, 1);
-            localStorage.setItem('cart', JSON.stringify(cartItems));
-            loadCart(); // Reload the cart to update totals
-        }
-
-        // Load the cart when the page loads
-        window.onload = loadCart;
-    </script>
-</body>
+    <script src="script.js"></script>
 </html>
