--- a/login.html
+++ b/login.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
-</head>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
+    <link rel="stylesheet" href="style.css"> 
 <body>
+    <section id="header">
+        <a href="#"><img src="img/zlogo.png" class="logo" alt=""></a>
+        <div>
+            <ul id="navbar">
+                <li><a href="index.html">Home</a></li>               
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>   
+                <li><a href="sign-up.html">Sign Up</a></li>                            
+                <a href="#" id="close"><i class="far fa-times"></i></a>
+            </ul>
+        </div>
+        <div id="mobile">
+            <a href="Cart.html"><i class="far fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+        </div>
+    </section>
+    <section id="page-header">
+        <h2>#stayhome</h2>                
+        <p>Save more with coupons & up to 70% off!</p>               
+    </section>
     <div class="login-container">
         <h2>Login</h2>
         <form action="http://localhost:5000/login" method="POST" id="loginForm">
