--- a/shop.html
+++ b/shop.html
@@ -19,6 +19,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li id="lg-bag"><a href="Cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                        <li><a href="#" onclick="logout()">Logout</a></li>
                         <a href="#" id="close"><i class="far fa-times"></i></a>
                     </ul>
                 </div>
@@ -227,7 +228,7 @@
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
                     </div>    
                     <div class="pro" onclick="window.location.href='sproduct.html';">
-                        <img src="img/products/n5.jpg" alt="">
+                        <img src="img/products/f1.jpg" alt="">
                         <div class="des">
                             <span>adidas</span>
                             <h5>Cartoon Astronaut T-Shirts</h5>
@@ -238,10 +239,10 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <h4>Kshs 78</h4>
+                            <h4>Kshs. 78</h4>
                         </div>
                         <a href="#"><i class="fa fa-shopping-cart cart"></i></a>
-                    </div>    
+                    </div>  
                     <div class="pro" onclick="window.location.href='sproduct.html';">
                         <img src="img/products/n6.jpg" alt="">
                         <div class="des">
@@ -354,7 +355,7 @@
                     <img src="img/pay/pay.png" alt="">
                 </div> 
                 <div class="copyright">
-                <p>@ 2024 , Tech2 etc - HTML CSS Ecommerce Template</p>
+                    <p>&copy; 2024, Tech2etc - HTML CSS Ecommerce Template</p>
             </div>
                 <div>
 
